--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ html {
 	margin:0;
 	max-width:100%;  
     flex-direction: column;
+	min-height: 100%;
 }
 .content {
 	height:100%;
@@ -390,10 +391,12 @@ li.head{
 	animation: bordcolor 9s ease infinite;
 }
 .footer { 
+		margin-top:2vw;
 		padding:0.1vw;
 		flex:0 1 auto;
 		background-color:#160e1c;
 		max-width:100%;
+		height:5%;
 }
 .footer p{
 	text-align:center;
@@ -441,57 +444,59 @@ li.head{
 	background-color:#000000;
 }
 .gamep{
+	
 	font-family: runescape, sans;
 	font-size: 3em;
 	color: #ffffff;
 	text-shadow: 1px 1px 2px #ffffff, 0 0 20px #ffffff;
 }
-
+.gameplayContainer{
+	display:flex;
+	flex-direction:row;
+	flex-wrap: no-wrap;
+}
 .divleft{
-	width:50%;
+	flex:1 0 50%;
+	max-width:50%;
 	float:left;
-	left: 1em;
+	padding-left: 1em;
 }
 .divright{
-	width:50%;
+	flex:1 1 50%;
+	max-width:50%;
 	float:right;
+	margin-right: 1em;
 }
 
 
 .player{
-	display: inline-block;
+	
 	font-family: runescape, sans;
-	font-size: 13em;
+	font-size: 7em;
 	color: #ffffff;
 	text-shadow: 1px 1px 2px #ffffff, 0 0 20px #ffffff;
 	line-height: 0.02;
-	position: relative;
-	bottom: 0.7em;
+	margin:0;
 	
 }
 .enemy{
-	display:inline-block;
 	font-family: runescape, sans;
-	font-size: 13em;
+	font-size: 7em;
 	color: #ffffff;
 	text-shadow: 1px 1px 2px #ffffff, 0 0 20px #ffffff;
 	line-height: 0.02;
-	position: relative;
-	bottom: 0.7em;
+	margin:0;
 }
 .pHp{
-	position: relative;
-	bottom: 5.4em;
+	
 }
 .eHp{
-	position: relative;
-	bottom: 5.4em;
+	
 }
 .sp{
 	float: left;
 	display:none;
 	margin-left:2vw;
-	z-index:3;
 	width:90%;
 	height:99%;
 	background-color:black;
@@ -566,18 +571,13 @@ h5{
 	box-shadow:none;
 }
 .attackbutton{
-	position:relative;
-	bottom:2em;
-	float:left;
+  margin-top:5vw;
   font-family: runescape, sans;
   color: white;
   background-color:black;
-  padding: 16px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 4.5em;
-  margin: 4px 2px;
   transition-duration: 0.9s;
   cursor: pointer;
   border: 1px solid white;
@@ -588,9 +588,7 @@ h5{
 	box-shadow:none;
 }
 .genButton{
-	position:relative;
-	bottom:0.7em;
-	float:left;
+  float:left;
   font-family: runescape, sans;
   color: white;
   background-color:black;
