--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,3 @@
-.loadingBG{
-	position: absolute;
-	height:100%;
-	width:100%;
-	object-fit: cover;
-	z-index: 10;
-}
-.loadingP{
-	position: absolute;
-	font-size:5vw;
-	left:37%;
-	z-index:11;
-	color:  #5b0b53;
-	text-shadow: 1px 1px 2px #fc696e, 0 0 20px #da00d8;
-	font-family: neonregular, Impact, sans-serif;
-}
-@keyframes loadingAnim{
-	0%{left:35%;transform:rotate(0deg);}
-	100%{left:60%;transform:rotate(180deg);}
-}
-
-.loadingPAnim{
-	transform:rotate(0deg);
-	position: absolute;
-	font-size:5vw;
-	left:35%;
-	top:20%;
-	z-index:11;
-	color:  #5b0b53;
-	text-shadow: 1px 1px 2px #fc696e, 0 0 20px #da00d8;
-	animation: loadingAnim 3s ease-in-out infinite alternate;
-	
-}
-
-
 
 @font-face {
     font-family: "runescape";
@@ -58,6 +23,7 @@ html {
 	margin:0;
 	overflow-x:hidden;
 }
+
 .bod {
 	display:flex;
 	overflow-y:hidden;
@@ -67,9 +33,10 @@ html {
 	max-width:100%;  
     flex-direction: column;
 	min-height: 100%;
+	
 }
 .content {
-	height:100%;
+	min-height:100%;
   flex: 1 0 auto;
   overflow: auto;
 }
@@ -77,7 +44,7 @@ html {
 	display: flex;
 	flex-direction: column;
 	flex-wrap:wrap;
-
+	
 }
 @keyframes buton{
 	0% {color: gray;}
@@ -344,10 +311,7 @@ ul.head{
 	font-size:2.5vw;
 	animation: list 12s infinite, list2 12s infinite;
 }
-li.head{
-	margin:0;
-	padding:0;
-}
+
 .alternate{
 	font-size:1.8vw;
 	list-style:none;
@@ -363,6 +327,7 @@ li.head{
 }
 .row2{
 	height: 40em;
+	
 	margin-top: 0;
 	display:flex;
 	flex-direction:row;
@@ -391,12 +356,16 @@ li.head{
 	animation: bordcolor 9s ease infinite;
 }
 .footer { 
-		margin-top:2vw;
+		margin-top:5vw;
 		padding:0.1vw;
-		flex:0 1 auto;
+	
+		bottom:0;
+		flex:1 1 auto;
+		justify-content:flex-end;
 		background-color:#160e1c;
+		width:100%;
 		max-width:100%;
-		height:5%;
+		
 }
 .footer p{
 	text-align:center;
@@ -419,12 +388,25 @@ li.head{
 	border:0.2vw solid #da00d8;
 	animation: bordcolor 9s ease infinite;
 	height:99.6%;
+	overflow:hidden;
 }
 .DivList h2{
 	margin-left:3vw;
 	font-family: neonregular, runescape, verdana;
 	font-size: 2.5vw;
 	animation: buton 10s infinite, buton2 10s infinite;
+}
+.DivList p{
+	padding-left:3vw;
+	margin:0;
+	margin-right:0.7vw;
+	margin-top:-1vw;
+	margin-bottom:0.7vw;
+	list-style-type: disc;
+	color: green;
+	font-family:neonregular;
+	font-size:2vw;
+	animation: list 12s infinite, list2 12s infinite;
 }
 .gameframe{
 	flex: 0 1 65%;
