--- a/src/App.css
+++ b/src/App.css
@@ -24,27 +24,28 @@ html {
 	overflow-x:hidden;
 }
 
-.bod {
+.app {
 	display:flex;
 	overflow-y:hidden;
 	overflow-x:hidden;
+	min-height:100vh;
 	padding:0;
 	margin:0;
 	max-width:100%;  
     flex-direction: column;
-	min-height: 100%;
-	
+
 }
 .content {
 	min-height:100%;
   flex: 1 0 auto;
   overflow: auto;
+  flex-grow:1;
 }
 .content2 {
 	display: flex;
 	flex-direction: column;
-	flex-wrap:wrap;
-	
+	flex:1 0 100%;
+	padding-bottom:8vh;
 }
 @keyframes buton{
 	0% {color: gray;}
@@ -278,11 +279,9 @@ ul.menu {
 	position:sticky;
 	position: -webkit-sticky;
 	top:0;
-	
 }
 li.menu{
 	float: left;
-	
 }
 li.menu a{
 	padding: 14px 16px;
@@ -356,10 +355,8 @@ ul.head{
 	animation: bordcolor 9s ease infinite;
 }
 .footer { 
-		margin-top:5vw;
+		margin-top:auto;
 		padding:0.1vw;
-	
-		bottom:0;
 		flex:1 1 auto;
 		justify-content:flex-end;
 		background-color:#160e1c;
@@ -646,7 +643,6 @@ h5{
 	box-shadow:none;
 }
 .storebutton{
-  
   margin-top:1vw;
   font-family: runescape, sans;
   color: white;
@@ -722,5 +718,60 @@ h5{
 }
 
 
+@media (max-width:480px)  {
+h1 {
+	font-size:9vw;
+}
+.DivHeader{
+	margin-top: 0;
+	display:flex;
+	flex-wrap: wrap;
+	padding:0 0;
+	overflow: visible;
+	height:20vw;
+}
+.columnChad{
+	flex:80%;
+	max-width:80%;
+	padding:0.1vw 0.1vw;
+}
+.NeonSign{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height: 19.4vw;
+	width: 100%;
+}
+.columnArchives{
+	flex:10;
+	max-width:10;
+}
+.columnHead{
+	flex:10%;
+	max-width:10%;
+}
+.Navbar{
+	position:static; 
+}
+li.menu a{
+	font-family:sans;
+	font-size: 2.7vw;
+	color: #da00d8;
+}
+.DivList{
+	display:none;
+}
+.game{
+	flex:1 0 99%;
+	max-width:99%;
+	overflow:hidden;
+	height:100%;
+	border:3px solid white;
+}
+.attackbutton{
+  margin-top:60vw;
+  margin-left:49%;
+}
 
+}
 
