--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,9 @@ html {
 }
 .content {
 	min-height:100%;
-  flex: 1 0 auto;
-  overflow: auto;
-  flex-grow:1;
+	flex: 1 0 auto;
+	overflow: auto;
+	flex-grow:1;
 }
 .content2 {
 	display: flex;
@@ -322,7 +322,6 @@ ul.head{
 	flex-wrap: wrap;
 	padding:0 0;
 	overflow: visible;
-	
 }
 .row2{
 	height: 40em;
@@ -716,8 +715,36 @@ h5{
 .main{
 	margin-left:2vw;
 }
-
-
+/*Todo-list related css below this line*/
+.todoRow{
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+}
+.todo{
+	flex: 1 1 80%;
+	max-width:60%;
+	background-color: #160e1c;
+	border:0.2vw solid #da00d8;
+	animation: bordcolor 9s ease infinite;
+	height:99.6%;
+	overflow:hidden;
+}
+.todo h2{
+	text-align:center;
+	margin-left:3vw;
+	font-family: neonregular, runescape, verdana;
+	font-size: 2.5vw;
+	animation: buton 10s infinite, buton2 10s infinite;
+}
+.todo p{
+	color: green;
+	font-family:neonregular;
+	font-size:2vw;
+	animation: list 12s infinite, list2 12s infinite;
+	margin-left:10%;
+}
+/*Mobile CSS below this line*/
 @media (max-width:480px)  {
 h1 {
 	font-size:9vw;
@@ -743,8 +770,8 @@ h1 {
 	width: 100%;
 }
 .columnArchives{
-	flex:10;
-	max-width:10;
+	flex:10%;
+	max-width:10%;
 }
 .columnHead{
 	flex:10%;
